unpackaged/objects/items_Drive_Manu__x.object
<CustomObject>
    <externalDataSource>Drive_Manu</externalDataSource>
    <externalName>items_Drive_Manu</externalName>
    <externalRepository>DownloadUrl</externalRepository>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>18</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>items_Drive_Manu</relationshipLabel>
        <relationshipName>items_Drive_Manu</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <externalDeveloperName>Author</externalDeveloperName>
        <label>Author</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <externalDeveloperName>Comment</externalDeveloperName>
        <label>Comment</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentLength__c</fullName>
        <externalDeveloperName>ContentLength</externalDeveloperName>
        <label>ContentLength</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <externalDeveloperName>CreationDate</externalDeveloperName>
        <label>CreationDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DownloadUrl__c</fullName>
        <externalDeveloperName>DownloadUrl</externalDeveloperName>
        <label>DownloadUrl</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsFolder</externalDeveloperName>
        <label>IsFolder</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MimeType__c</fullName>
        <externalDeveloperName>MimeType</externalDeveloperName>
        <label>MimeType</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>ParentId</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateDate__c</fullName>
        <externalDeveloperName>UpdateDate</externalDeveloperName>
        <label>UpdateDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <externalDeveloperName>UpdatedBy</externalDeveloperName>
        <label>UpdatedBy</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <label>items_Drive_Manu</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>DisplayUrl</columns>
        <columns>ExternalId</columns>
        <columns>ParentId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>items_Drive_Manu</pluralLabel>
</CustomObject>